Fix: Text align for some page

--- a/client/src/styles/HomePage/FourthPage/index.scss
+++ b/client/src/styles/HomePage/FourthPage/index.scss
@@ -21,5 +21,9 @@
         display: flex;
         flex-direction: column;
         gap: 2.5em;
+
+        p {
+            text-align: justify;
+        }
     }
 }
