--- a/client/src/styles/HomePage/LastestNews/index.scss
+++ b/client/src/styles/HomePage/LastestNews/index.scss
@@ -44,6 +44,10 @@
                 flex-direction: column;
                 gap: 1.5rem;
 
+                p {
+                    text-align: justify;
+                }
+
                 .card--readmore {
                     margin-top: 2rem;
 
