--- a/client/src/styles/HomePage/SecondPage/index.scss
+++ b/client/src/styles/HomePage/SecondPage/index.scss
@@ -19,5 +19,9 @@
         display: flex;
         flex-direction: column;
         gap: 2.5em;
+
+        p {
+            text-align: justify;
+        }
     }
 }
